# software-factory-ai

./: .credo.exs  .dialyzer_ignore.exs  .formatter.exs  .gitignore  AGENTS.md  ARCHITECTURE.md  AUTONOMY_LEVELS.md  CAPABILITY-REGISTRY.md  CLAUDE.md  CONCEPTS.md  DOGFOOD-READINESS.md  EVIDENCE_SCHEMA.md  HANDOFF.md  LICENSE  M4-IMPLEMENTATION-PLAN.md  M4-PROGRESS.md  README.md  ROADMAP-REVIEW.md  ROADMAP.md  SAFETY_POLICY.md  STRATEGY.md  TASK_SCHEMA.md  VISION.md  goal.md  implement-all-beads-prompt.md  mise.toml  mix.exs  prompt.md
samples/beads_insight/: AGENTS.md  README.md  conveyor.plan.yml  plan.md  pyproject.toml
samples/beads_insight/.conveyor/canary/: mutants.json  reference_full.patch  reference_slice_001_loader.patch  reference_slice_002_ready_report.patch  reference_slice_003_cycles.patch  reference_slice_004_epics.patch  reference_slice_005_velocity.patch  reference_slice_006_digest.patch  reference_slice_007_envelope_assertion.patch
samples/beads_insight/src/br_insight/: __init__.py  cli.py  clock.py  loader.py  model.py  report.py
samples/beads_insight/tests/: conftest.py  test_cycles.py  test_determinism.py  test_digest.py  test_epics.py  test_format.py  test_loader.py  test_ready.py  test_velocity.py
samples/beads_insight/tests/fixtures/: cyclic.jsonl  issues.jsonl  (+1 more)
samples/gx/: AGENTS.md  README.md  conveyor.plan.yml  plan.md  pyproject.toml
samples/gx/tests/: conftest.py  test_components.py  test_cycles.py  test_degrees.py  test_determinism.py  test_digest.py  test_edge_cases.py  test_format.py  test_loader.py  test_toposort.py
(+1773 files in other folders)
