[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "br_insight"
version = "0.1.0"
description = "Read-only, hermetic CLI over .beads/issues.jsonl (ready/cycles/epics/velocity/digest)."
requires-python = ">=3.11"
# Runtime is stdlib-only (argparse, json, datetime, dataclasses, typing).
dependencies = []

[project.optional-dependencies]
dev = ["pytest==9.1.0"]

[project.scripts]
br-insight = "br_insight.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
